--- a/.github/workflows/Build_Phicomm-N1.yml
+++ b/.github/workflows/Build_Phicomm-N1.yml
@@ -1,4 +1,4 @@
-name: 编译R2S固件
+name: 编译Phicomm-N1固件
 
 on:
   repository_dispatch:
@@ -10,22 +10,28 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: R2S/R2S.config
-  DIY_P1_SH: R2S/diy-part1.sh
-  DIY_P2_SH: R2S/diy-part2.sh
+  CONFIG_FILE: Phicomm-N1/Phicomm-N1.config
+  DIY_P1_SH: Phicomm-N1/diy-part1.sh
+  DIY_P2_SH: Phicomm-N1/diy-part2.sh
   CLASH_KERNEL: arm64
   UPLOAD_RELEASE: true
-  FILE_NAME: NanoPi-R2S
-  PRODUCT_NAME: NanoPi-R2S
+  FILE_NAME: ROOTFS
+  PRODUCT_NAME: Phicomm-N1
 
 jobs:
   Build:
     runs-on: ubuntu-22.04
 
+    outputs:
+      author: ${{ steps.clone.outputs.author }}
+      date: ${{ steps.clone.outputs.date }}
+      commit: ${{ steps.clone.outputs.commit }}
+      hash: ${{ steps.clone.outputs.hash }}
+
     steps:
     - name: 准备完成
       uses: actions/checkout@v3
-      
+
     - name: 检查服务器性能
       run: |
         echo "警告⚠"
@@ -127,32 +133,117 @@ jobs:
       id: organize
       if: steps.compile.outputs.status == 'success'
       run: |
-        cd openwrt/bin/targets/*/*
-        rm -rf packages config.buildinfo feeds.buildinfo openwrt-rockchip-armv8-friendlyarm_nanopi-r2s.manifest profiles.json sha256sums version.buildinfo
+        cd $GITHUB_WORKSPACE/openwrt/bin/packages
+        tar -zcvf Packages.tar.gz ./*
+        cp Packages.tar.gz $GITHUB_WORKSPACE/openwrt/bin/targets/*/*
+        cd $GITHUB_WORKSPACE/openwrt/bin/targets/*/*
+        rm -rf Packages.tar.gz config.buildinfo feeds.buildinfo openwrt-armvirt-64-generic-kernel.bin openwrt-armvirt-64-generic.manifest sha256sums version.buildinfo
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
-        echo "KERNEL=$(cat *.manifest | grep ^kernel | cut -d- -f2 | tr -d ' ')" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
 
     - name: 发布固件
       id: release
       uses: ncipollo/release-action@v1
+      if: env.UPLOAD_RELEASE == 'true' && steps.compile.outputs.status == 'success'
+      with:
+        name: ${{ env.DATE }} 🚫 「${{ env.FILE_NAME }}底包」
+        allowUpdates: true
+        removeArtifacts: true
+        tag: ${{ env.FILE_NAME }}
+        token: ${{ secrets.GH_TOKEN }}
+        artifacts: ${{ env.FIRMWARE }}/*
+        body: |
+          **This is Temporary Firmware for Armvirt 64**
+          ### 📒 固件信息
+          - 💻 这是 ARMv8 底包，非完整固件，不可直刷
+          - 🚀 直刷固件点击此处跳转➦[${{ env.PRODUCT_NAME }}](https://github.com/kaikai8191/OpenWrt/releases/tag/${{ env.PRODUCT_NAME }})即可下载
+          - ⚽ 固件源码: ${{ env.REPO_URL }}
+          - 💝 源码分支: ${{ env.REPO_BRANCH }}
+          ### 🧊 固件版本
+          - 固件编译前最后一次➦[主源码](${{ env.REPO_URL }})更新记录
+          - ${{ env.author }}
+          - ${{ env.date }}
+          - ${{ env.commit }}
+          - ${{ env.hash }}
+
+  Package:
+    needs: [Build]
+    runs-on: ubuntu-22.04
+
+    env:
+      author: ${{ needs.Build.outputs.author }}
+      date: ${{ needs.Build.outputs.date }}
+      commit: ${{ needs.Build.outputs.commit }}
+      hash: ${{ needs.Build.outputs.hash }}
+
+    steps:
+    - name: 准备完成
+      uses: actions/checkout@v3
+
+    - name: 设置日期
+      run: |
+        echo "DATE=$(date +"%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
+
+    - name: 初始化系统环境
+      env:
+        DEBIAN_FRONTEND: noninteractive
+      run: |
+        docker rmi $(docker images -q)
+        sudo rm -rf /usr/share/dotnet /etc/apt/sources.list.d /usr/local/lib/android $AGENT_TOOLSDIRECTORY
+        sudo -E apt-get -y update
+        sudo -E apt-get -y install $(curl -fsSL is.gd/depends_ubuntu_2204)
+        pip install aligo
+        sudo -E apt-get -y autoremove --purge
+        sudo -E apt-get -y clean
+        sudo timedatectl set-timezone "Asia/Shanghai"
+
+    - name: 打包openwrt
+      uses: ophub/flippy-openwrt-actions@main
+      if: (!cancelled())
+      env:
+        OPENWRT_ARMVIRT: https://github.com/rvvu/OpenWrt/releases/download/ROOTFS/openwrt-armvirt-64-generic-rootfs.tar.gz
+        PACKAGE_SOC: s905d
+        WHOAMI: TIAmo
+        OPENWRT_VER: ${{ github.event.inputs.openwrt_version }}
+        DISTRIB_REVISION: ${OPENWRT_VER} (By @TIAmo build $(TZ=UTC-8 date "+%Y-%m-%d %H:%M"))
+        KERNEL_REPO_URL: https://github.com/rvvu/kernel/releases/tag/kernel_stable
+        KERNEL_VERSION_NAME: 5.15.13
+        KERNEL_AUTO_LATEST: true
+        GZIP_IMGS: .gz
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+
+    - name: 整理固件文件
+      run: |
+        cd /opt/openwrt_packit/output
+        rm -rf openwrt-armvirt-64-generic-rootfs.tar.gz openwrt-armvirt-64-generic-rootfs.tar.gz.sha *.img.gz.sha
+        echo "PACKAGED_OUTPUTPATH=$PWD" >> $GITHUB_ENV
+        echo "status=success" >> $GITHUB_OUTPUT
+
+    - name: 发布固件
+      if: env.PACKAGED_STATUS == 'success' && env.UPLOAD_RELEASE == 'true'
+      uses: ncipollo/release-action@v1
       with:
         name: ${{ env.DATE }} 🚫 「${{ env.PRODUCT_NAME }}固件」
         allowUpdates: true
         removeArtifacts: true
-        tag: ${{ env.FILE_NAME }}
-        commit: main
+        tag: ${{ env.PRODUCT_NAME }}
         token: ${{ secrets.GH_TOKEN }}
-        artifacts: ${{ env.FIRMWARE }}/*
+        artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
         body: |
-          **This is OpenWrt Firmware for ${{ env.PRODUCT_NAME }}**
+          **This is OpenWrt Firmware for Armvirt 64**
           ### 📒 固件信息
-          - 💻 这是 ${{ env.PRODUCT_NAME }} 平台使用的 OpenWrt 固件
+          - 💻 这是 ${{ env.PRODUCT_NAME }} 固件，集成一些日常常用插件
           - ⚽ 固件源码: ${{ env.REPO_URL }}
           - 💝 源码分支: ${{ env.REPO_BRANCH }}
-          - 🚀 内核版本: ${{ env.KERNEL }}
-          - 🌐 默认地址: 192.168.1.2
+          - 🌐 默认地址: 192.168.1.4
           - 🔑 默认密码: password
+          ### 🍻 安装与更新
+          - 用插件安装: 系统 → 晶晨宝盒 → 安装 OpenWrt → 选择型号 → 安装
+          - 用命令安装: U盘启动成功后输入命令 `openwrt-install-amlogic` 按照英文提示写入到 emmc
+          - 用插件更新: 系统 → 晶晨宝盒 → 在线下载更新 → 完整更新全系统
+          - 用命令更新: 上传固件到 `/mnt/mmcblk2p4` 目录，输入命令 `openwrt-update-amlogic` 即可更新
+          - 注意: 如非 `amlogic` 平台，请将其更改为对应平台 `rockchip` `allwinner`
+          - 部分常见问题及注意事项请参考恩山论坛F大➦[最新帖](https://www.right.com.cn/forum/thread-4076037-1-1.html)
           ### 🧊 固件版本
           - 固件编译前最后一次➦[主源码](${{ env.REPO_URL }})更新记录
           - ${{ env.author }}
@@ -163,18 +254,18 @@ jobs:
     - name: 复制文件
       run: |
         mkdir -p ./ARM_Out/
-        cp -a ${{ env.FIRMWARE }}/* ./ARM_Out/
+        cp -a ${{ env.PACKAGED_OUTPUTPATH }}/* ./ARM_Out/
         cd ARM_Out
-        mv openwrt-rockchip-armv8-friendlyarm_nanopi-r2s-squashfs-sysupgrade.img.gz R2S-$(date +%Y%m%d).img.gz
-        zip -r $GITHUB_WORKSPACE/ARM_Out/R2S-$(date +%Y%m%d).zip R2S-$(date +%Y%m%d).img.gz
+        mv openwrt_s905d_n1*.img.gz N1-$(date +%Y%m%d).img.gz
+        zip -r $GITHUB_WORKSPACE/ARM_Out/N1-$(date +%Y%m%d).zip N1-$(date +%Y%m%d).img.gz
 
     - name: 上传Aliyun
       run: | 
         echo "请自动忽略META-INF文件夹。" > 忽略META-INF文件夹.txt
-        zip_files=$(find $GITHUB_WORKSPACE/ARM_Out/R2S* -name '*.zip' -type f -print | tr '\n' ';' | sed 's/;$//')
+        zip_files=$(find $GITHUB_WORKSPACE/ARM_Out/N1* -name '*.zip' -type f -print | tr '\n' ';' | sed 's/;$//')
         echo "Zip files: ${zip_files}"
         chmod +x $GITHUB_WORKSPACE/diy/aliupload.py
-        python $GITHUB_WORKSPACE/diy/aliupload.py --token "${{ secrets.ALIYUN_TOKEN }}" --uploadFloder "OpenWrt/R2S" --file "${zip_files}"   
+        python $GITHUB_WORKSPACE/diy/aliupload.py --token "${{ secrets.ALIYUN_TOKEN }}" --uploadFloder "OpenWrt/N1" --file "${zip_files}"
     
     - name: 删除运行记录
       uses: Mattraks/delete-workflow-runs@v2
