--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -1,4 +1,4 @@
-name: 编译R2S固件
+name: 编译x86固件
 
 on:
   repository_dispatch:
@@ -10,13 +10,13 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: R2S/R2S.config
-  DIY_P1_SH: R2S/diy-part1.sh
-  DIY_P2_SH: R2S/diy-part2.sh
-  CLASH_KERNEL: arm64
+  CONFIG_FILE: x86/x86.config
+  DIY_P1_SH: x86/diy-part1.sh
+  DIY_P2_SH: x86/diy-part2.sh
+  CLASH_KERNEL: amd64
   UPLOAD_RELEASE: true
-  FILE_NAME: NanoPi-R2S
-  PRODUCT_NAME: NanoPi-R2S
+  FILE_NAME: X86_64
+  PRODUCT_NAME: X86_64
 
 jobs:
   Build:
@@ -128,7 +128,7 @@ jobs:
       if: steps.compile.outputs.status == 'success'
       run: |
         cd openwrt/bin/targets/*/*
-        rm -rf packages config.buildinfo feeds.buildinfo openwrt-rockchip-armv8-friendlyarm_nanopi-r2s.manifest profiles.json sha256sums version.buildinfo
+        rm -rf packages config.buildinfo feeds.buildinfo openwrt-x86-64-generic-kernel.bin openwrt-x86-64-generic-squashfs-rootfs.img.gz openwrt-x86-64-generic.manifest profiles.json sha256sums version.buildinfo
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "KERNEL=$(cat *.manifest | grep ^kernel | cut -d- -f2 | tr -d ' ')" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
@@ -151,7 +151,7 @@ jobs:
           - ⚽ 固件源码: ${{ env.REPO_URL }}
           - 💝 源码分支: ${{ env.REPO_BRANCH }}
           - 🚀 内核版本: ${{ env.KERNEL }}
-          - 🌐 默认地址: 192.168.1.2
+          - 🌐 默认地址: 192.168.1.3
           - 🔑 默认密码: password
           ### 🧊 固件版本
           - 固件编译前最后一次➦[主源码](${{ env.REPO_URL }})更新记录
@@ -162,19 +162,19 @@ jobs:
 
     - name: 复制文件
       run: |
-        mkdir -p ./ARM_Out/
-        cp -a ${{ env.FIRMWARE }}/* ./ARM_Out/
-        cd ARM_Out
-        mv openwrt-rockchip-armv8-friendlyarm_nanopi-r2s-squashfs-sysupgrade.img.gz R2S-$(date +%Y%m%d).img.gz
-        zip -r $GITHUB_WORKSPACE/ARM_Out/R2S-$(date +%Y%m%d).zip R2S-$(date +%Y%m%d).img.gz
+        mkdir -p ./X86_Out/
+        cp -a ${{ env.FIRMWARE }}/* ./X86_Out/
+        cd X86_Out
+        mv openwrt-x86-64-generic-squashfs-combined-efi.img.gz X86-$(date +%Y%m%d).img.gz
+        zip -r $GITHUB_WORKSPACE/X86_Out/X86-$(date +%Y%m%d).zip X86-$(date +%Y%m%d).img.gz
 
     - name: 上传Aliyun
       run: | 
         echo "请自动忽略META-INF文件夹。" > 忽略META-INF文件夹.txt
-        zip_files=$(find $GITHUB_WORKSPACE/ARM_Out/R2S* -name '*.zip' -type f -print | tr '\n' ';' | sed 's/;$//')
+        zip_files=$(find $GITHUB_WORKSPACE/X86_Out/X86* -name '*.zip' -type f -print | tr '\n' ';' | sed 's/;$//')
         echo "Zip files: ${zip_files}"
         chmod +x $GITHUB_WORKSPACE/diy/aliupload.py
-        python $GITHUB_WORKSPACE/diy/aliupload.py --token "${{ secrets.ALIYUN_TOKEN }}" --uploadFloder "OpenWrt/R2S" --file "${zip_files}"   
+        python $GITHUB_WORKSPACE/diy/aliupload.py --token "${{ secrets.ALIYUN_TOKEN }}" --uploadFloder "OpenWrt/X86" --file "${zip_files}"
     
     - name: 删除运行记录
       uses: Mattraks/delete-workflow-runs@v2
