--- a/.github/workflows/Build_R2S.yml
+++ b/.github/workflows/Build_R2S.yml
@@ -128,7 +128,7 @@ jobs:
       if: steps.compile.outputs.status == 'success'
       run: |
         cd openwrt/bin/targets/*/*
-        rm -rf packages config.buildinfo feeds.buildinfo openwrt-rockchip-armv8-friendlyarm_nanopi-r2s.manifest profiles.json sha256sums version.buildinfo
+        rm -rf packages feeds.buildinfo openwrt-rockchip-armv8-friendlyarm_nanopi-r2s.manifest profiles.json sha256sums version.buildinfo
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "KERNEL=$(cat *.manifest | grep ^kernel | cut -d- -f2 | tr -d ' ')" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
