--- a/.github/workflows/R2S-config.yml
+++ b/.github/workflows/R2S-config.yml
@@ -12,10 +12,10 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  FEEDS_CONF: R2S/feeds.conf.default
-  CONFIG_FILE: R2S/R2S.config
-  DIY_P1_SH: R2S/diy-part1.sh
-  DIY_P2_SH: R2S/diy-part2.sh
+  FEEDS_CONF: configs/R2S/feeds.conf.default
+  CONFIG_FILE: configs/R2S/R2S.config
+  DIY_P1_SH: configs/R2S/diy-part1.sh
+  DIY_P2_SH: configs/R2S/diy-part2.sh
   UPLOAD_FIRMWARE: true
   CONFIG: R2S
   
