--- a/.github/workflows/Build_R2S.yml
+++ b/.github/workflows/Build_R2S.yml
@@ -157,7 +157,7 @@ jobs:
           - ${{ env.commit }}
           - ${{ env.hash }}
 
-    - name: Telegram notification
+    - name: 电报通知
       run: |
         MSG="
         编译时间：${{ env.DATE }}
